--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ torch==2.0.0
 torchvision==0.15.1
 tweepy==4.14.0
 tweet-counter==0.1.0
+git+https://github.com/facebookresearch/detectron2.git@v0.4
